Não entendi. Na tela de preview aqui ao lado eu vejo a nossa landing pag

--- a/firebase.json
+++ b/firebase.json
@@ -4,5 +4,13 @@
   },
   "storage": {
     "rules": "storage.rules"
+  },
+  "hosting": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
