--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,54 @@
-See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-Dependencies
-
-/node_modules
+# Dependencies
+node_modules/
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-Testing
+.pnp.js
 
+# Testing
 /coverage
-Next.js
 
+# Next.js
 /.next/
 /out/
-Production
 
+# Production
 /build
-Misc
+/dist
 
+# Misc
 .DS_Store
 *.pem
-Debug Logs
 
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-firebase-debug.log
-firestore-debug.log
-Vercel
 
+# Local env files
+.env
+.env*.local
+
+# Vercel
 .vercel
-TypeScript
 
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
-Genkit
 
-.genkit/
-Local Environment Variables
-
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-Firebase & IDE
-
+# Firebase
 .firebase/
-.idx/*.tar.gz
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+
+# Cloud Functions
+functions/lib/
+functions/node_modules/
+functions/.env
+functions/serviceAccountKey.json
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
